--- a/style.css
+++ b/style.css
@@ -14,3 +14,9 @@ body {
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
 }
+titulo-principal{
+    text-align:left;
+    width:100%
+    font-sign:32px;
+}
+
