--- a/style.css
+++ b/style.css
@@ -26,7 +26,15 @@ body {
     font-family: ; "Chakra Petch", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
-    justify-content: center
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
 }
 
     
